# nexus-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SYSTEM_CHECK.md  SYSTEM_STATUS.md  alembic.ini  architecutre.txt  check_syntax.py  debug_log.txt  main.py  pyproject.toml  run_scrapers.py  run_scrapers_with_pipeline.py  test_handle_url.py  test_pydantic_models.py  test_youtube_scraper.py  verification_result.txt  verify_all.py  verify_output.txt
.github/workflows/: tests.yml
agent/: __init__.py  config.yaml  prompts.py  system_prompt.txt
alembic/: env.py
alembic/versions/: 9c615cf7ecec_initial_schema.py  b850dc962822_add_dead_letters_table.py  e35de033c420_add_pipeline_runs_table.py
app/: config.py  database.py  logging_config.py  models.py
app/api/: main.py
app/cache/: __init__.py  redis_client.py
app/database/: __init__.py  base.py  create_tables.py  models.py  models_extended.py  (+1 more)
config/: youtube_channels.json
docker/: docker-compose.yml  example.env  init.sql
scripts/: add_anthropic_sources.py  add_name_column.py  add_source.py  backfill.py  benchmark.py  check_and_fix_enum.py  complete_database_fix.py  debug_imports.py  final_fix.py  fix_enum_case.py  fix_processing_enum.py  fix_sourcetype_enum.py  health_check.py  init_db.py  init_tables.py  integration_test.py  list_gemini_models.py  migrate_database.py  optimize_database.py  replay_dead_letters.py  run_workers.py  seed_google_source.py  seed_sources.py  seed_subscription.py  send_digest_now.py  setup_docker.ps1  test_db_connection.py  test_email.py  test_infrastructure.py  test_pipeline.py  update_anthropic_sources.py  verify_tables.py
temp/: test_digest.html  test_digest.txt
tests/: conftest.py  test_dedup.py  test_llm_parser.py  test_quality_gates.py
(+27 files in other folders)
